new functionality and test cases